--- a/setup.cfg
+++ b/setup.cfg
@@ -36,3 +36,4 @@ where = src
 [options.entry_points]
 console_scripts =
     compute_rse = rse.workflow:compute_rse_cli
+    predict_rse = rse.gnn:predict_rse_cli
